Link caption changed

--- a/AspCoreWeb/Views/Home/Index.cshtml
+++ b/AspCoreWeb/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 
     <div>
-        @Html.ActionLink("Run All Tests libGcmAes.so (x64)", "RunAllTests")
+        @Html.ActionLink("Run All Tests on exported libGcmAes.so (x64) functions", "RunAllTests")
     </div>
 
 </div>
